samples/_failures_safe/1761443635_03f025_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_359e5be4.c: In function ‘main’:
./samples/SAFE/__tmp_359e5be4.c:147:13: error: expected declaration or statement at end of input
  147 |             printf("Matrix multiplication failed.\n");
      |             ^~~~~~
./samples/SAFE/__tmp_359e5be4.c:147:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_359e5be4.c:147:13: error: expected declaration or statement at end of input
